feat:쿠폰 재고초기화 연습 코드 작성

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -28,6 +28,5 @@ spring:
       value-deserializer: org.springframework.kafka.support.serializer.JsonDeserializer
       properties:
         spring.json.trusted.packages: "com.main.kafka.dto"
-
-app:
-  default-topic: topic-1
+    template:
+      default-topic: topic-1
